trading.log
  File "/home/runner/work/arkana/arkana/main.py", line 191
    df = yf.download(ticker, start=tanggal.strftime("%Y-%m-%d"), end=(tanggal + pd.Timedelta(days=5)).strftime("%Y-%m-%d")auto_adjust=False)
                                                                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
